Fix text alignment for h1 in style.css

--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ h1{
     font-size: 30px;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    x-position: center;
+    text-align: center;
 }
